# dotmac-platform-services

./: .coveragerc  .env.example  .env.hybrid.example  .env.local.example  .env.multi-tenant.example  .env.production.example  .env.single-tenant.example  .env.test  .env.testing.example  .gitignore  .mypy-minimal.ini  .pip-audit-ignore.json  .pre-commit-config.yaml  ADMIN_SETTINGS_AUDIT_COMPLETE.md  BILLING_MODULE.md  BROKEN_TESTS_FIXED.md  CI_CD_ENVIRONMENT_ALIGNMENT.md  CI_CONFIGURATION_UPDATE.md  CLAUDE_OLD.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CREATE_TEST_USER.md  DEPENDENCY_UPDATE_CHECKLIST.md  DEPLOYMENT.md  DEV_SOP.md  DOCUMENTATION_ALIGNMENT_SUMMARY.md  DOCUMENTATION_UPDATE_COMPLETE.md  Dockerfile  Dockerfile.app-updates  Dockerfile.prod  E2E-TESTS-QUICK-START.md  FIXTURE_DOCUMENTATION.md  FORM_VALIDATION_GUIDE.md  FOUNDATIONAL_FIXES.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_COMPLETE_GUIDE.md  INFRASTRUCTURE.md  LICENSE  LOCAL_DEVELOPMENT.md  LOGGING.md  (+54 more)
.github/workflows/: CLEANUP_CHECKLIST.md  MIGRATION_SUMMARY.md  NEXT_STEPS.md  PR_DESCRIPTION.md  README.md  WORKFLOW_CHANGES.md  check-migrations.yml  ci-build.yml  ci.yml  deploy.yml  e2e-tests.yml  e2e-tests.yml.disabled  frontend-tests.yml  reusable-setup.yml  type-safety-validation.yml  unified-ci.yml  visual-regression.yml
.husky/: commit-msg  pre-commit
alembic/: APPLICATION_DEFAULTS_CHECKLIST.md  POSTGRES_DEPENDENCIES.md  README.md  env.py
alembic/versions/: 2025_01_15_1400-a1b2c3d4e5f6_add_subscribers_table.py  2025_01_15_1500-b7c8d9e0f1a2_add_radius_tables.py  2025_01_15_1600-c9d0e1f2a3b4_add_crm_tables.py  2025_01_15_1700-e1f2g3h4i5j6_add_notification_tables.py  2025_01_15_1800-b5c6d7e8f9g0_add_diagnostics_tables.py  2025_01_16_1200-field_operations_system.py  2025_09_01_000000-0001_initial_baseline.py  2025_09_01_1344-90ab336e04eb_add_management_and_vps_tables.py  2025_09_24_0945-9d6a492bf126_merge_migration_heads.py  2025_09_30_0854-b9f25627decc_baseline_complete_schema.py  2025_09_30_1044-f1c6e454da91_link_invoices_to_contacts.py  2025_10_01_0929-8aabad7a20d7_add_partner_management_tables.py  2025_10_03_1345-1275a5851a69_change_user_constraints_to_per_tenant_.py  2025_10_04_0819-133b0030fe4e_add_is_platform_admin_field_to_users_.py  2025_10_04_1845-5e2f03239595_add_user_profile_columns.py  2025_10_07_0806-51aa0da58b97_initial_schema_from_models.py  (+120 more)
config/: development.yaml  production.yaml
docker/: Dockerfile.freeradius
docs/: AUDIT_LOGGING_FIX_FINAL.md  BACKEND_PRODUCTION_GUIDE.md  DEVELOPMENT_DATABASE.md  DEVELOPMENT_WARNINGS.md  FRONTEND_BACKEND_TESTING.md  INDEX.md  MEASURING_COVERAGE_LOCALLY.md  OBSERVABILITY_RUNTIME.md  PLATFORM_CRITICAL_GAPS_PLAN.md  PRODUCTION_DEPLOYMENT.md  README.md  REDIS_MANDATORY_PRODUCTION.md  RUNTIME_WARNINGS_SOLUTION_FINAL.md  billing-money-implementation.md  billing-system-design.md  complete-billing-architecture.md  e2e-test-setup-complete.md  e2e-testing-guide.md  migration-issue-root-cause-analysis.md  migration-issue-summary.md  partner-portal-implementation-status.md  partner-portal-revenue-share-plan.md  quick_start.md  rbac-migration-guide.md  rbac-permission-matrix.md  tenant-context.md  user-journey-gap-analysis.md  user-journey.md
examples/: .env.vault.example  clean_secrets_demo.py  dependency_management_demo.py  event_driven_demo.py  events_example.py  modern_file_processing.py  observability_service.py  service_registry_example.py  test_vault_integration.py  vault_setup.sh
fixes/: priority2_fixes.py
frontend/: .env.example  .env.test  .gitignore  ARCHITECTURE.md  AUTHENTICATION_SECURITY.md  BILLING_INTEGRATION_GUIDE.md  DEPLOY.md  Dockerfile  Dockerfile.dev  Dockerfile.simple  ENTERPRISE_READY.md  FIXES_COMPLETED.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY_SETUP.md  PERFECT_INTEGRATION.md  PRODUCTION_READY.md  PROGRESS_UPDATE.md  QUICK_START.md  README.md  README_OLD.md  SESSION_SUMMARY.md  WEBHOOKS_FRONTEND_INTEGRATION.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
nginx/: nginx.prod.conf
prometheus/: alertmanager.yml  dual-stack-alerts.yml.disabled  prometheus-updated.yml  prometheus.yml
redis/: redis.conf
scripts/: README.md  add_model_config.py  assign_admin_role.py  assign_default_tenant.py  backfill_analytics.py  backfill_plan_subscription_subscriber_id.py  blue-green-controller.sh  bootstrap_platform_admin.py  browser-inspector.mjs  build-and-push-freeradius.sh  build-multiarch.sh  capture-ui-screenshots.sh  capture-with-interception.js  celery-entrypoint.sh  celery_worker.py  check-contrast.mjs  check-external-services.sh  check_coverage.py  check_deps.py  check_infra.sh  cleanup.sh  compare-test-results.sh  configure_alert_channels.py  count_mocks.sh  create-test-users.py  create-test-users.sh  create_admin_user.py  create_agent_tables.py  create_agent_tables.sql  create_deployment_templates.sql  create_platform_admin.py  create_rbac_tables.py  create_tenant.py  deploy-multi-tenant.sh  deploy.sh  dev-backend.sh  docker-compose-pre-flight.sh  docker-entrypoint.sh  export_openapi.py  generate-db-config.sh  (+80 more)
tests/: FIXTURE_USAGE_GUIDE.md  INFRASTRUCTURE_TESTS.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  conftest.py  conftest.py.original  conftest_real.py  conftest_rls_helpers.py  conftest_telemetry.py  integration_test_config.py  shared_fixtures.py  test_all_configs.py  test_all_enums.py  test_all_exceptions.py  test_all_imports.py  test_analytics_models_comprehensive.py  test_auth_init.py  test_auth_integration.py  test_caching.py  test_celery_app.py  test_cleanup_registry_demo.py  test_cli.py  test_cli_simple.py  test_communications.py  test_contract_import.py  test_core.py  test_core_models.py  test_coverage_boost.py  test_customer_router_comprehensive.py  test_customer_router_coverage.py  test_db.py  test_dependencies.py  test_distributed_locks.py  test_encryption_service.py  test_events.py  test_feature_flags.py  test_fixed_features.py  test_graphql_cookie_auth.py  test_health_checks_comprehensive.py  (+30 more)
(+2703 files in other folders)
