[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotmac-platform-services"
version = "1.0.0"
description = "DotMac Platform Services - Multi-tenant SaaS platform microservices (Auth, Billing, Tenancy, etc.)"
authors = ["DotMac Team <dev@dotmac.com>"]

readme = "README.md"
packages = [{include = "dotmac", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Core dependencies
fastapi = ">=0.110.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
sqlalchemy = ">=2.0.0"
pyjwt = {extras = ["crypto"], version = ">=2.8.0"}
redis = ">=5.0.0"
cryptography = ">=41.0.0"
httpx = ">=0.25.0"
aiohttp = ">=3.9.0"
structlog = ">=23.0.0"
protobuf = "^4.25.8"
pyyaml = ">=6.0.0"
# Standard library replacements for core
slowapi = ">=0.1.9"
tenacity = ">=8.2.0"
result = ">=0.16.0"
email-validator = ">=2.1.0"
phonenumbers = ">=8.13.0"
python-dotenv = ">=1.0.0"
fastapi-pagination = ">=0.12.0"
cachetools = ">=5.3.0"
# OAuth with Authlib
authlib = "^1.6.5"

# OpenTelemetry (observability) - Core packages for telemetry
opentelemetry-api = ">=1.21.0"
opentelemetry-sdk = ">=1.21.0"
opentelemetry-exporter-otlp = ">=1.21.0"
opentelemetry-instrumentation-fastapi = ">=0.42b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.42b0"

# Additional OpenTelemetry instrumentations
opentelemetry-instrumentation-requests = ">=0.42b0"
opentelemetry-instrumentation-celery = ">=0.48b0"

# Task Queue & Messaging
celery = {extras = ["redis", "amqp"], version = "^5.3.0"}
kombu = "^5.3.0"
flower = "^2.0.1"

# Database Migrations
alembic = "^1.13.0"

# Service discovery (modern fork with Python 3.13 support)
py-consul = {extras = ["asyncio"], version = "^1.6.0"}

# Storage
minio = "^7.2.0"
python-multipart = "^0.0.18"

# Search
meilisearch = "^0.31.0"

# Server
uvicorn = {extras = ["standard"], version = ">=0.25.0"}

# Secrets and authentication (all core now)
hvac = "^2.0.0"
pyotp = ">=2.9.0"
qrcode = {extras = ["pil"], version = ">=7.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.3.0"  # Pin bcrypt version to avoid warnings

# Payment processing
pypaystack2 = "^2.0.0"

# Database drivers (all core)
aiosqlite = ">=0.19.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"

# Development tools
gitpython = "^3.1.40"

# Core File Processing & I/O
aiofiles = "^24.1.0"
pypdf2 = "^3.0.1"
pillow = "^10.2.0"  # Image processing
python-docx = "^1.1.0"  # Word document processing
openpyxl = "^3.1.2"  # Excel processing
python-pptx = "^0.6.23"  # PowerPoint processing
defusedxml = "^0.7.1"  # Secure XML parsing
jinja2 = "^3.1.6"
greenlet = "^3.2.4"
lxml = "^6.0.2"
psutil = "^5.9.0"
prometheus-client = "^0.23.1"
py-moneyed = "^3.0"
babel = "^2.17.0"
reportlab = "^4.4.4"
strawberry-graphql = "^0.282.0"
pywebpush = "^2.0.0"

# Data processing (required by data_transfer module)
pandas = "^2.2.0"

# Optional heavy dependencies - install via extras if needed
# ffmpeg-python = "^0.2.0"  # Moved to [media-processing] extra (currently unused)
# python-rule-engine = "^1.0.0"  # Moved to [rules-engine] extra (currently unused)
# casbin = "^1.43.0"  # Moved to [casbin] extra (currently unused, RBAC uses custom SQL)
# casbin-sqlalchemy-adapter = "^1.4.0"  # Moved to [casbin] extra
sse-starlette = "^3.0.2"
croniter = "^6.0.0"
elasticsearch = "^9.1.1"
pybreaker = "^1.4.1"
pyrad = "^2.4"
psycopg = {extras = ["binary"], version = "^3.2.12"}

[tool.poetry.extras]
# Media processing (for video/audio file handling - currently unused)
# Install with: poetry install --extras media-processing
media-processing = ["ffmpeg-python"]

# Rules engine (for complex business rules - currently unused)
# Install with: poetry install --extras rules-engine
rules-engine = ["python-rule-engine"]

# Casbin policy engine (alternative to custom SQL RBAC - currently unused)
# To enable: install with `poetry install --extras casbin` and configure policies
# Note: Current RBAC implementation uses custom SQL logic, not Casbin
casbin = ["casbin", "casbin-sqlalchemy-adapter"]

# All optional features
all = ["ffmpeg-python", "python-rule-engine", "casbin", "casbin-sqlalchemy-adapter"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
diff-cover = "^9.0.0"
black = "^24.3.0"
ruff = ">=0.1.0"
mypy = ">=1.7.0"
bandit = {extras = ["toml"], version = ">=1.7.0"}
fakeredis = "^2.20.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
responses = "^0.24.0"
tenacity = "^8.2.3"
mutmut = "^2.4.5"
pip-audit = "^2.7.3"
pyright = "^1.1.386"
# Contract testing
schemathesis = "^3.19.0"
openapi-spec-validator = "^0.6.0"
jsonschema = "^4.20.0"
# Test dependencies that need extras
hvac = "^2.0.0"  # For Vault integration tests
uvicorn = {extras = ["standard"], version = ">=0.25.0"}  # For testing server
pyotp = ">=2.9.0"  # For MFA tests
qrcode = {extras = ["pil"], version = ">=7.4.0"}  # For MFA tests
aiosqlite = ">=0.19.0"  # For SQLite tests
psycopg2-binary = "^2.9.10"  # For PostgreSQL tests
asyncpg = "^0.30.0"  # For PostgreSQL tests
passlib = {extras = ["bcrypt"], version = "^1.7.4"}  # For password hashing tests
isort = "^6.0.1"
pytest-xdist = "^3.8.0"
types-redis = "^4.6.0.20241004"
types-passlib = "^1.7.7.20240327"
types-stripe = "^3.5.2.20240106"
types-pytz = "^2024.2.0.20240913"
types-cachetools = "^5.5.0.20240820"
libcst = "^1.8.5"
pytest-aiohttp = "^1.1.0"
pytest-timeout = "^2.4.0"
types-pyyaml = "^6.0.12.20250915"
typer = "^0.20.0"



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "auth: Authentication related tests",
    "observability: Observability related tests",
    "secrets: Secrets management tests",
    "benchmark: Performance benchmark tests",
    "performance: Performance tests",
    "chaos: Chaos engineering tests",
    "contract: API contract tests",
    "critical: Critical security/business logic tests (90%+ coverage)"
]
addopts = [
    "--strict-markers",
    "--strict-config",
    # Coverage disabled by default - enable with --cov flag
    # Use: pytest --cov for coverage
    # Parallel execution: Use -n auto to enable pytest-xdist
    # Example: pytest -n auto (auto-detect CPUs)
    #          pytest -n 4 (use 4 workers)
]

# pytest-xdist configuration for parallel test execution
# Note: Some tests may need to be marked with @pytest.mark.xdist_group("group_name")
# to ensure they run serially within that group (e.g., database migrations)
[tool.pytest_xdist]
# Load balancing algorithm: "load", "loadscope", "loadfile", "loadgroup"
# "loadscope" groups tests by class/module for better isolation
looponfail = false

[tool.coverage.run]
source = ["src/dotmac"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/examples/*",
    "*/scripts/*",
    "*/__main__.py"
]
parallel = true

[tool.coverage.report]
# Base threshold - module-specific targets in .coveragerc
# Enforced gradually via diff coverage (80% on PRs)
fail_under = 75
precision = 2
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "# nocov",
    "if 0:",
    "if False:",
    "assert False"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mutmut]
# Limit mutation testing to auth and secrets code paths
paths_to_mutate = "src/dotmac/platform/auth src/dotmac/platform/secrets"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=short"
dict_synonyms = "Struct,NamedStruct"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "archive",
    "fixes",
    "scripts",
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402", "F401", "F403"]
"tests/billing/usage/test_usage_billing_integration.py" = ["F821", "E402"]  # Skipped test - module not implemented
"src/dotmac/platform/db/__init__.py" = ["F401"]  # JSONBCompat is in __all__ but ruff can't detect it
"tests/**/*.py" = ["B017"]  # Allow broad exception catches in tests

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W293",  # blank line with whitespace
    "W291",  # trailing whitespace
    "B008",  # function calls in argument defaults (ok for FastAPI Depends)
    "B904",  # raise without from (can add later)
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
# Balanced mode - not fully strict but catches important issues
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
# Import following
follow_imports = "normal"
ignore_missing_imports = true
# Display
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
color_output = true
error_summary = true
# Exclusions
exclude = "(^frontend/|^alembic/|^tests/|^scripts/|^examples/|^archive/)"
# Allow mypy to treat the src layout without duplicate module warnings
explicit_package_bases = false
# Namespace packages
namespace_packages = true
# Cache
incremental = true
cache_dir = ".mypy_cache"
mypy_path = ["stubs"]
# Plugins
plugins = [
    "strawberry.ext.mypy_plugin",
    "sqlalchemy.ext.mypy.plugin",
]

# Per-module overrides
[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "dotmac.platform.workflows.*",
    "dotmac.platform.access.*",
    "dotmac.platform.auth.router",
    "dotmac.platform.fiber.*",
    "dotmac.platform.licensing.*",
    "dotmac.platform.deployment.*",
    "dotmac.platform.radius.*",
    "dotmac.platform.wireless.*",
    "dotmac.platform.billing.*",
]
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["attr-defined", "arg-type"]

[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
